# goit-pycore-template

./: LICENSE  README.md  main.py  mise.toml  project.code-workspace  pyproject.toml  requirements.txt
.github/workflows/: gh-pages.yml
docs/source/: conf.py  index.rst
source/: conf.py  index.rst
