[project]
name = "goit-pycore-hw-04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alabaster==1.0.0",
    "babel==2.18.0",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "docutils==0.22.4",
    "idna==3.13",
    "imagesize==2.0.0",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "packaging==26.2",
    "pip==26.1",
    "pluggy==1.6.0",
    "pygments==2.20.0",
    "pytest==9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-sphinx>=0.7.1",
    "requests==2.33.1",
    "roman-numerals==4.1.0",
    "snowballstemmer==3.0.1",
    "sphinx==9.1.0",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "urllib3==2.6.3",
]
